--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
 .header {
-  width: 90%;
-  margin-left: auto
-  
+    width: 90%;
+    margin-left: auto;
+}
+
+.MessagesBlock {
+    width: 400px;
+    height: 300px;
+    overflow: scroll;
 }
