--- a/src/components/Messages/Messages.css
+++ b/src/components/Messages/Messages.css
@@ -1,10 +1,33 @@
 .Messages {
     width: 250px;
-    padding: 16px;
+    padding: 5px;
     text-align: center;
     border: 1px solid #eee;
+    border-radius: 15px;
     box-shadow: 0 2px 3px #ccc;
     margin: 10px;
     box-sizing: border-box;
-    cursor: pointer;
+    /*cursor: pointer;*/
 }
+
+/*.Messages {*/
+/*    border: 5px dotted #bbb; !* Dotted border *!*/
+/*    width: 80%;*/
+/*    border-radius: 15px; !* Rounded border *!*/
+/*    margin: 0 auto; !* Center the coupon *!*/
+/*    max-width: 600px;*/
+/*}*/
+
+/*.container {*/
+/*    padding: 2px 16px;*/
+/*    background-color: #f1f1f1;*/
+/*}*/
+
+/*.promo {*/
+/*    background: #ccc;*/
+/*    padding: 3px;*/
+/*}*/
+
+/*.expire {*/
+/*    color: red;*/
+/*}*/
